--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="monospaced_font">Use monospaced font</string>
     <string name="show_keyboard">Show keyboard on startup</string>
     <string name="show_word_count">Show word count</string>
+    <string name="show_character_count">Show character count</string>
     <string name="alignment">Alignment</string>
     <string name="left">Left</string>
     <string name="center">Center</string>
