--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -23,6 +23,8 @@
     <!-- File notes -->
     <string name="open_file">Abrir archivo</string>
     <string name="export_as_file">Exportar como archivo</string>
+    <string name="words">Palabras</string>
+    <string name="chars">Caracteres</string>
     <string name="file_too_large">Archivo demasiado grande, el límite es 1MB</string>
     <string name="only_import_file_content">Solo importar el contenido del archivo\n(Cambiar el archivo no afectará a la nota)</string>
     <string name="update_file_at_note">Actualizar el propio archivo cuando se actualice la nota\n(La nota se borrará si el archivo se elimina, o la ruta cambia)</string>
