--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -23,6 +23,8 @@
     <!-- File notes -->
     <string name="open_file">Bestand openen</string>
     <string name="export_as_file">Als bestand exporteren</string>
+    <string name="words">Woorden</string>
+    <string name="chars">Tekens</string>
     <string name="file_too_large">Bestand is te groot: limiet is 1MB</string>
     <string name="only_import_file_content">Alleen de bestandsinhoud importeren\n(wijzigingen aan het bestand zullen de notitie niet beïnvloeden)</string>
     <string name="update_file_at_note">Bestand aanpassen bij wijzigingen in de notitie\n(de notitie wordt gewist als het bestand wordt verplaatst of verwijderd)</string>
