--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -23,6 +23,8 @@
     <!-- File notes -->
     <string name="open_file">Faylı Aç</string>
     <string name="export_as_file">Fayl kimi çıxar</string>
+    <string name="words">Sözlər</string>
+    <string name="chars">Simvollar</string>
     <string name="file_too_large">Fayl çox böyükdür, limit 1mb\"dır</string>
     <string name="only_import_file_content">Yalnız fayl məzmununu daxil et\n(faylı dəyişmək qeydı təsir etməyəcək)</string>
     <string name="update_file_at_note">Qeydi təzələdikdə faylı da təzələ\n(fayl silinirsə qeyd də silinər və ya yeri dəyişər)</string>
