--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -23,6 +23,8 @@
     <!-- File notes -->
     <string name="open_file">Otwórz plik</string>
     <string name="export_as_file">Wyeksportuj jako plik</string>
+    <string name="words">Słowa</string>
+    <string name="chars">Postacie</string>
     <string name="file_too_large">Plik jest za duży (może mieć co najwyżej 1 MB)</string>
     <string name="only_import_file_content">Zaimportuj tylko zawartość pliku\n(zmiana pliku nie będzie miała wpływu na notatkę)</string>
     <string name="update_file_at_note">Zaktualizuj plik po zaktualizowaniu notatki\n(notatka zostanie usunięta jeśli plik zostanie usunięty lub zmieni się jego lokalizacja)</string>
