--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -23,6 +23,8 @@
     <!-- File notes -->
     <string name="open_file">Abrir arquivo</string>
     <string name="export_as_file">Exportar como arquivo</string>
+    <string name="words">Palavras</string>
+    <string name="chars">Personagens</string>
     <string name="file_too_large">Arquivo muito grande, o limite é 1 MB</string>
     <string name="only_import_file_content">Importe apenas o conteúdo do arquivo\n(modificar o arquivo não afetará a nota)</string>
     <string name="update_file_at_note">Atualize o próprio arquivo ao atualizar a nota\n(a nota será excluída se o arquivo for excluído ou o caminho alterado)</string>
