--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -67,32 +67,30 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
-    <string name="app_title">Simple Notes Pro: To-do list organizer and planner</string>
+    <string name="app_title">Simple Notes Pro: To-Do Liste und Organizer</string>
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Simple planner: Create notes, backup &amp; to-do lists with quick note reminder tool</string>
+    <string name="app_short_description">Schlichte Notizen: Erstelle Notizen und To-Do Listen</string>
     <string name="app_long_description">
-        ★ Need to take a quick note of something to buy, an address, or a startup idea? Then look no further as this is the simple organizer tool you\'ve been looking for : Simple Notes: To-do list organizer and planner! No complicated setup steps needed, just tap the screen and type in what you came for and create notes, quick lists, checklist or backup for any idea. With your simple personal notebook you can remember anything fast! Shopping for groceries, memorizing your thoughts and easier setting up reminders taking notes has never been easier ★
+        ★ Müssen Sie kurz etwas zum Kaufen, eine Adresse oder eine Startup-Idee notieren? Dann suchen Sie nicht weiter, denn dies ist das einfache Organizer-Tool, nach dem Sie gesucht haben: Erstellen Sie einfach eine Notiz oder eine To-Do Liste. Keine komplizierten Einrichtungsschritte erforderlich. Tippen Sie einfach auf den Bildschirm und geben Sie ein, was Sie nicht vergessen wollen. Erstellen Sie Notizen, To-Do Listen oder Checklisten für jede Idee. Mit Ihrem einfachen persönlichen Notizbuch können Sie sich schnell an alles erinnern, es war noch nie so einfach ★
 
-        Simple notes planner is quick, simple to use organizer and remarkable planner and it will serve as an invaluable tool and companion, helping you to remember necessary piece of information!
+        Schnell, einfach zu bedienen und ein bemerkenswerter Planer. Er dient als unschätzbares Werkzeug und Begleiter und hilft Ihnen, sich an die erforderlichen Informationen zu erinnern!
 
-        Our reminder tool allows you to keep track of your duties,create daily checklist for items or ideas with unprecedented simplicity, notability and unrivaled time-saving value. Manage your schedule in a quick and simple manner.
+        Mit unserem Erinnerungstool können Sie Ihre Aufgaben verfolgen, eine tägliche Checkliste für Artikel oder Ideen erstellen. Verwalten Sie Ihren Zeitplan schnell und einfach.
 
-        This notebook reminder tool comes with autosave so you will not discard your changes by mistake. It also supports creating multiple independent plain text notes and lists very fast.
+        Unterstützt die automatische Speicherung, damit Ihre Änderungen nicht versehentlich verloren gehen. Es unterstützt auch das schnelle Erstellen mehrerer unabhängiger Klartextnotizen und Listen.
 
-        You can easily access the note and organize your to-do list in no time by using the customizable and resizable widget, which opens the app on tap.
+        Mit dem anpassbaren Widget, mit dem die App sofort geöffnet wird, können Sie in kürzester Zeit problemlos auf die Notiz zugreifen und Ihre Aufgabenliste organisieren.
 
-        It is user friendly and contains absolutely no ads or unnecessary permissions - no strings attached. It is fully opensource, provides customizable colors which can be adjusted with quick and fast tweaking.
+        <b>Simple Notes Pro: To-Do Liste und Organizer</b> ist der beste Organizer und Planer ohne Werbung. Wenn Sie einen hochwertigen Organizer für schnelle Notizen benötigen, laden Sie jetzt unsere App herunter :) Halten Sie jeden Tag Ihr persönliches Notizbuch in der Tasche und machen Sie sich keine Sorgen mehr, ein wichtiges Meeting oder Ihre Einkaufsliste zu vergessen :).
 
-        <b>Simple Notes: To-do list organizer and planner</b> is the best item organizer and list planner you can use with no ads. If you need a high quality organizer for a quick and goodnotes, a reliable and user friendly reminder that is truly simple to use, download our app right now :) Have your own personal notebook in your pocket every day and have a backup planner so you will not have to worry about forgetting an important meeting or your shopping list :).
+        Weiter unterstützt die App standardmässig das Materialdesign und Dark-Theme und bietet eine hervorragende Benutzererfahrung für eine einfache Verwendung. Keine Internetverbindung nötig, dadurch mehr Privatsphäre, Sicherheit und Stabilität als andere Apps.
 
-        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.
+        Enthält keine Werbungen und benötigt keine unnötigen Berechtigungen. Vollständig OpenSource und bietet anpassbare Farben.
 
-        Beinhaltet keine Werbung oder unnötige Berechtigungen. Sie ist komplett Open Source, alle verwendeten Farben sind anpassbar.
-
-        <b>Check out the full suite of Simple Tools here:</b>
+        <b>Schau dir die vollständige Serie der Schlichten Apps hier an:</b>
         https://www.simplemobiletools.com
 
-        <b>Standalone website of Simple Notes Pro:</b>
+        <b>Webseite von Simple Notes Pro:</b>
         https://www.simplemobiletools.com/notes
 
         <b>Facebook:</b>
