--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -88,7 +88,7 @@
 
         L\'applicazione non contiene pubblicità o permessi non necessari; è completamente opensource e la si può personalizzare con i propri colori preferiti.
 
-        <b>Dai un'occhiata alle altre applicazioni della serie Simple Tools:</b>
+        <b>Dai un\'occhiata alle altre applicazioni della serie Simple Tools:</b>
         https://www.simplemobiletools.com
 
         <b>Sito web dedicato a Simple Notes Pro:</b>
