--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -68,7 +68,7 @@
     <!-- App title has to have less than 50 characters. If you cannot squeeze it, just remove a part of it -->
     <string name="app_title">Simple Notes Pro: To-do list organizer and planner</string>
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Planificador simple: crea notas, garda &amp;listas do que teña que facer cunha ferramenta recordatoria</string>
+    <string name="app_short_description">Simple planner: Create notes, backup &amp; to-do lists with quick note reminder tool</string>
     <string name="app_long_description">
         ★ Necesitas tomar unha nota rápida de algo que mercar, un enderezo ou unha idea? Non busques máis xa que esta é a ferramenta de organizador sinxela que estaba buscando: Notas simples: organizador e planificador de listas de tarefas pendentes. Non fai falta ningunha etapa de configuración complicada; só tes que tocar a pantalla e escribir o que buscaches e crear notas, listas rápidas, lista de verificación ou copia de seguridade para calquera idea. Coa túa sinxela libreta persoal podes recordar calquera cousa rápido. Nunca foi tan fácil mercar en supermercados, memorizar os teus pensamentos e configurar con máis facilidade recordatorios para tomar notas ★
 
