--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,5 +1,5 @@
 ﻿<resources>
-    <string name="app_name">Simple Notes</string>
+    <string name="app_name">シンプル メモ</string>
     <string name="app_launcher_name">メモ</string>
     <string name="widget_config">シンプルメモのご利用ありがとうございます。\n他のシンプルアプリは SimpleMobileTools.com をご覧ください。</string>
     <string name="cannot_share_empty_text">空のテキストは共有できません</string>
